--- a/recipes/pubspec.yaml
+++ b/recipes/pubspec.yaml
@@ -34,6 +34,8 @@ dev_dependencies:
     sdk: flutter
   firebase_core: ^1.4.0
   cloud_firestore: ^2.4.0
+  flutter_colorpicker: ^0.6.0
+  intl: ^0.17.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
